syntax = "proto3";

package notification_service;

service NotificationserviceService {
    rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
    string message = 1;
}

message PingResponse {
    string message = 1;
}
